source/widgets/style/css/fields.css
/*override scroll padding */

.field-list li {
    padding: 0;
    /*centers the text vertically */
    line-height: 45px;
}

.field-list h2{
    color: #666;
}

ul.field-list {
    padding: 20px;
    width: 100%;
    position: absolute;
}

ul.field-list li {
    height: auto;
    min-height: 45px;
    
    border-bottom: 1px solid #ccc;
    border-left: 1px solid #ccc;
    border-right: 1px solid #ccc;
    
    box-sizing: border-box;
    background-clip: border-box;

    background: white;

    overflow: hidden;
}

ul.field-list li.first {
    -webkit-border-top-left-radius: 7px;
    -webkit-border-top-right-radius: 7px;   
    border-top: 1px solid #ccc;
}

ul.field-list li.last {
    -webkit-border-bottom-left-radius: 7px;
    -webkit-border-bottom-right-radius: 7px;   
 
}


ul.field-list li.break {
    border: 0px;
    background: transparent;
}

ul.field-list li.fl-button {
    text-align: center;
    font-weight: bold;
}

ul.field-list li.fl-button:active {
    /* background-color: #008afd; */

    background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, from(#008afd), to(#005def));
    background-image: -moz-linear-gradient(#008afd 0%,  #005def 100%);

    text-shadow: none;
    color: white;
    font-weight: bold;
}

li.selected {
    background-color: #eeeeff;
}

label {
    font-size: 15px;
    font-weight: bold;

    padding-left: 10px;

    display: block;
    width: 100%;
    height: 100%;
    float: left;
    overflow: hidden;

}

input, select {
    padding: 0;
    margin: 0;

    text-overflow: ellipsis;
    -webkit-user-select: text;

    font-size: 18px;
    
    border: 0px;
    width: 100%;
    height: 100%;

    text-shadow: none;

    display: block;
 
}


select {
    padding-left: 10px;
}


/* the div in the li for fieldlists */
.mx-row {
    height: 45px;
    width: 100%;
    overflow: hidden;
}


.mx-label {
    height: 100%;
    width: 40%;
    float: left;

    overflow: hidden;
    text-overflow: ellipsis;

    background: #F3F3F3;
}


.mx-input {
 
    height: 100%;
    width: 55%;
    padding-left: 5px;
    float: left;
    position: relative;
}


.mx-input-end {
    float: right;
    height: 100%;
    width: 5%;
    min-width: 30px;
    
}


.first .mx-label {
    -webkit-border-top-left-radius: 7px;
}

.last .mx-label {
    -webkit-border-bottom-left-radius: 7px;
}



/* Better iOS Sliders
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
.toggle-button-wrap {

    width: 100px;
    height: 30px;
    
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    -webkit-box-shadow: 0 2px 3px #888 inset, 0 1px 1px #fff;
    -moz-box-shadow: 0 2px 3px #888 inset, 0 1px 1px #fff;
    box-shadow: 0 2px 3px #888 inset, 0 1px 1px #fff;
    border: 1px solid #999;
    background: rgba(0, 0, 0, 0.05);
    overflow: hidden;
    margin-top: 7px;
    float: right;
    position: relative;
    z-index: 0;

    line-height: 18px;
}


.toggle-back {

    
    width: 60px;
    height: 30px;
    
    position: absolute;
    top: 0px;
    left: 0px;

    -webkit-border-top-left-radius: 5px;
    -moz-border-radius-topleft: 5px;
    border-top-left-radius: 5px;


    -webkit-border-bottom-left-radius: 5px;
    -moz-border-radius-bottomleft: 5px;
    border-bottom-left-radius: 5px;

    /*background-image: -webkit-gradient(linear, 0% 0%, 100% 0%, from(#008afd), color-stop(.5, #008afd), color-stop(.51,rgba(0, 0, 0, 0.05)), to(rgba(0, 0, 0, 0.05))); */
    

    background: #f09933;
    
    -webkit-box-shadow: 0 2px 3px #ad6c20 inset;
    -moz-box-shadow: 0 2px 3px #ad6c20 inset;
    box-shadow: 0 2px 3px #ad6c20 inset;
    text-shadow: 0 1px 1px #f4ca99;


}

.toggle-back.off {
    width: 40px;
} 

.toggle-holder {
    width: 150px;
    height: 30px;
    top: 0px;
    left: 0px;
    position: absolute;
}
    
.toggle-holder.on{
    -webkit-transition-timing-function: linear;
    -webkit-transition-duration: .1s; 
    -webkit-transform: translate3d(0px, 0px, 0px);
}

.toggle-holder.off{
    -webkit-transition-timing-function: linear;
    -webkit-transition-duration: .1s; 
    -webkit-transform: translate3d(-50px, 0px, 0px);
}


.toggle-label {
    
    font-family: Helvetica, Arial, sans-serif;
    font-weight: bold;
    text-transform: uppercase;
    color: #444;
    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.8);
    font-size: 100%;
    position: absolute;

    width: 50px;
    height: 29px;
    
    top: 0px;
}


.toggle-label.on {
    
    left: 0px;
    position: absolute;

    text-align: left;
    float: left;
    
    padding: 7px 0 9px 8px;

    
}

.toggle-label.off {
    
    left: 100px;
    position: absolute;

    text-align: right;
    float: right;
    
    padding: 7px 15px 8px 0;
}

.toggle-button {

    top: 0px;
    left: 50px;
    position: absolute;

    width: 50px;
    height: 30px;
    
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;

    -webkit-box-shadow: 0 1px 1px #fff inset, 0 0 10px #d7d7d7 inset, 0 0 10px #888;
    -moz-box-shadow: 0 1px 1px #fff inset, 0 0 10px #d7d7d7 inset, 0 0 10px #888;
    box-shadow: 0 1px 1px #fff inset, 0 0 10px #d7d7d7 inset, 0 0 10px #888;
    
    background-color: #444444;
    background-image: -moz-linear-gradient(top, #c2c2c2, #efefef); /* FF3.6 */
    background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #c2c2c2),color-stop(1, #efefef)); /* Saf4+, Chrome */
    filter:  progid:DXImageTransform.Microsoft.gradient(startColorStr='#c2c2c2', EndColorStr='#efefef'); /* IE6,IE7 */
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorStr='#c2c2c2', EndColorStr='#efefef')"; /* IE8 do I really fucking care!*/
    
    border: 1px solid #999;
    
    margin: -1px 0 0 -1px;
    padding: 5px 0 0 0;
    
    text-align: center;
    cursor: pointer;
    clear: both;
    position: relative;
    
    z-index: 10;

}


.search-enter {
    overflow: hidden;
    height: 100%;
}


.search-wrap {
    width: 100%;
    height: 28px;
    padding-left: 3px;
    -webkit-border-radius: 12px;

    -webkit-box-shadow: inset rgba(0, 0, 0, 0.1) 0 0.1em 0, inset rgba(0, 0, 0, 0.3) 0 -0.1em 0, inset rgba(0, 0, 0, 0.1) 0.1em 0 0, inset rgba(0, 0, 0, 0.1) -0.1em 0 0, inset rgba(0, 0, 0, 0.5) 0 0.15em 0.4em

}


.search-wrap input{
    background: url('../img/search-glass.png') no-repeat;
    -webkit-border-radius: 12px;
    padding-left: 28px;
}

.panel.filter {
    background-color: #FFFFFF;    
}

.filter {
    -webkit-border-radius: 12px;
}


.search-clear {
    margin-top: 4px;
    float: right;
    width: 24px;
    height: 24px;
    background: url('../img/clear-field.png') no-repeat;;
}

